Test on FREEDA